test/preprocessor/invalid/ifdef_ifndef.glsl
#ifdef TEST
    int a;
#else
    int b;
#else
    int c;
#endif
